--- a/frontend/src/pages/CreatePage/CreatePage.module.css
+++ b/frontend/src/pages/CreatePage/CreatePage.module.css
@@ -1,8 +1,23 @@
 .black {
   padding: 100px 0;
   width: 100%;
-  background-color: black;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.input {
+  outline: 0;
+  border: 1px solid gray;
+  border-radius: 5px;
+  padding: 10px 15px;
+  font-size: 18px;
+}
+
+.flex {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
 }
